<resources>
    <string name="app_name">Narrastorie</string>
    <string name="app_version">Versione 1.0</string>
    <string name="author">Autore</string>
    <string name="author_name">Francesco Cariaggi</string>
    <string name="author_email">anfri.cariaggi@gmail.com</string>
    <string name="tell_me_a_story">Narrami una storia</string>
    <string name="my_stories">Le mie storie</string>
    <string name="no_available_stories">Niente da visualizzare</string>
    <string name="about">Info</string>
    <string name="characters">Personaggi</string>
    <string name="confirm">Conferma</string>
    <string name="add_character">Aggiungi personaggio</string>
    <string name="pick_character">Scegli personaggio</string>
    <string name="need_a_hint">Serve un suggerimento?</string>
    <string name="enter_your_name">Inserisci il tuo nome. Mi servirà per riferirmi a te mentre racconterò la storia</string>
    <string name="your_name">Il tuo nome</string>
    <string name="wanna_save_story">Fine! Vuoi salvare la storia che hai appena ascoltato?</string>
    <string name="enter_story_name">Dai un titolo a questa storia</string>
    <string name="title">Titolo</string>
    <string name="wanna_delete_story">Vuoi davvero eliminare questa storia?</string>
    <string name="dont_leave_it_empty">Non può essere vuoto!</string>
    <string name="characters_description">Scegli i protagonisti della storia. Li riconosci? Sono i tuoi contatti!</string>
    <string name="saving_story">Sto salvando la storia… (Richiederà un po\' di tempo)</string>
    <string name="story_saved">Storia salvata</string>
    <string name="story_already_present">È già presente una storia con quel nome!</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="superlorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
	<string name="S0">
	{
		\"fragmentID\": \"S0\",
		\"text\": \"{0} e {1}, amici di lunga data, decidono di trascorrere un fine settimana al mare per alleviare il crescente stress che aveva cominciato a perseguitarli da quando avevano perduto il lavoro. \",
		\"endType\": \"Continue\",
		\"endOptions\": {
			\"branches\": 2
		}
	}
	</string>
	<string name="S0.0">
	{
		\"fragmentID\": \"S0.0\",
		\"text\": \"{0} fu vittima di un improvviso taglio del personale presso l\'azienda cui aveva prestato servizio per vent\'anni. Stando invece a quanto diceva il capo di {1}, la sua natura pacata e rilassata mal si sposava coi ritmi frenetici che la sua azienda imponeva. Tra {1} e il suo capo correva tensione da molto  tempo. \",
		\"endType\": \"Continue\",
		\"endOptions\": {
			\"branches\": 1
		}
	}
	</string>
	<string name="S0.1">
	{
		\"fragmentID\": \"S0.1\",
		\"text\": \"Pochi mesi prima {0} aveva dovuto rifiutare un trasferimento al nord. La decisione aveva destato non poco risentimento tra i suoi superiori, così adesso si ritrovava a casa con un pugno di mosche. {1}, dal canto suo, aveva dovuto farsi da parte. \\\"C\'è bisogno di idee nuove, idee che solo le giovani menti sono in grado di partorire\\\" – aveva detto il suo capo. \",
		\"endType\": \"Continue\",
		\"endOptions\": {
			\"reconnectsTo\": \"S0.0.0\"
		}
	}
	</string>
	<string name="S0.0.0">
	{
		\"fragmentID\": \"S0.0.0\",
		\"text\": \"{0} e {1} partirono alle prime luci dell\'alba di un 20 Aprile che per la verità assomigliava molto ad un 20 Agosto. \\\"E poi c\'è ancora chi non vuole ammettere che i tempi sono cambiati. Questi cambiamenti climatici sono un problema serio. Ho letto da qualche parte che molte specie animali sono a rischio estinzione.\\\" - disse {1}. \\\"L\'hai detto!\\\" – ribatté {0}. Arrivarono poco prima delle 11, quando ormai il sole era già alto nel cielo. \\\"Ehi {0}, dove hai detto di aver prenotato?\\\" - chiese {1}. \",
		\"endType\": \"Swipe\",
		\"endOptions\": {
			\"message\": \"Dove hai prenotato? \",
			\"leftSwipeMessage\": \"\\\"E\' un modesto hotel a pochi passi dal mare.\\\" \",
			\"rightSwipeMessage\": \"\\\"Come sarebbe {1}, credevo ci avessi pensato tu!\\\" \"
		}
	}
	</string>
    <string name="S0.0.0.0">
	{
		\"fragmentID\": \"S0.0.0.0\",
		\"text\": \"\\\"Fantastico\\\" – disse {1}. \\\"È ancora molto distante?\\\" \\\"Non preoccuparti {1}, intravedo già la bandiera a scacchi nel navigatore.\\\" \",
		\"endType\": \"Continue\",
		\"endOptions\": {
			\"branches\": 1
		}
	}
	</string>
	<string name="S0.0.0.0.0">
	{
		\"fragmentID\": \"S0.0.0.0.0\",
		\"text\": \"Una volta raggiunto l\'hotel, si accorsero che l\'ingresso era vuoto. Un silenzio quasi irreale avvolgeva la stanza. {0} notò un campanello sul bancone della reception. La sua mente fu proiettata indietro nel tempo di almeno quarant\'anni. Ricordò con nostalgia sua madre che soleva agitare un campanello molto simile a quello quando la cena era pronta. \\\"Forse se ci annunciamo qualcuno si farà vivo\\\" – pensò. \",
		\"endType\": \"Interaction\",
		\"endOptions\": {
			\"message\": \"Annunciati agitando il campanello. \",
			\"interactionType\": \"Shaking\",
			\"hint\": \"Prova scuotere il dispositivo. \"
		}
	}
	</string>
	<string name="S0.0.0.0.0.0">
	{
		\"fragmentID\": \"S0.0.0.0.0.0\",
		\"text\": \"Quella che accolse {0} e {1} era una signora piuttosto attempata. Aveva i capelli biondi, e indossava un elegante collana di perle. \\\"Buongiorno, voi dovreste essere {0} e {1}, dico bene? Venite, vi mostro la vostra camera.\\\" \",
		\"endType\": \"Continue\",
		\"endOptions\": {
			\"branches\": 1
		}
	}
	</string>
	<string name="S0.0.0.1">
	{
		\"fragmentID\": \"S0.0.0.1\",
		\"text\": \"\\\"Accidenti {0}! Ma che hai in testa?\\\" \\\"Senti {1}, non facciamone una tragedia. La distrazione è uno dei tanti sintomi dello stress. Cerchiamo soltanto di rilassarci in questi giorni.\\\" \\\"Hai ragione {0}, ti chiedo scusa.\\\" \",
		\"endType\": \"Continue\",
		\"endOptions\": {
			\"branches\": 1
		}
	}
	</string>
	<string name="S0.0.0.1.0">
	{
		\"fragmentID\": \"S0.0.0.1.0\",
		\"text\": \"{0} e {1} adocchiarono un piccolo ostello non troppo distante dal mare. Decisero di entrare con la speranza di potervisi sistemare. \",
		\"endType\": \"Continue\",
		\"endOptions\": {
			\"branches\": 1
		}
	}
	</string>
	<string name="S0.0.0.1.0.0">
	{
		\"fragmentID\": \"S0.0.0.1.0.0\",
		\"text\": \"Quello che accolse {0} e {1} era un giovanotto dall\'aria familiare. A {1} ricordava molto {2}, una vecchia amicizia dei banchi di scuola. \\\"Chissà se sono imparentati in qualche modo\\\" – pensò. \\\"Buongiorno, cosa posso fare per voi?\\\" - chiese il giovane. \\\"Stiamo cercando una camera per questo fine settimana.\\\" – rispose {1}. \\\"Immagino non abbiate prenotato. Dunque vediamo… Oh! La fortuna vi sorride, proprio ieri una coppia ha dovuto disdire la propria prenotazione.\\\" \\\"Grandioso, disse {0}.\\\" \\\"Seguitemi, vi mostro la vostra camera.\\\" \",
		\"endType\": \"Continue\",
		\"endOptions\": {
			\"reconnectsTo\": \"S0.0.0.0.0.0.0\"
		}
	}
	</string>
	<string name="S0.0.0.0.0.0.0">
	{
		\"fragmentID\": \"S0.0.0.0.0.0.0\",
		\"text\": \"\\\"Allora, la camera è di vostro gradimento?\\\" - domandò. \",
		\"endType\": \"Swipe\",
		\"endOptions\": {
			\"message\": \"La camera è di vostro gradimento? \",
			\"leftSwipeMessage\": \"\\\"Deliziosa\\\" – disse {0}. \\\"Sembra accogliente\\\" – aggiunse {1}. \",
			\"rightSwipeMessage\": \"\\\"Non ne avreste una leggermente più spaziosa? Sa, io soffro di claustrofobia.\\\" - lamentò {1}. \"
		}
	}
	</string>
	<string name="S0.0.0.0.0.0.0.0">
	{
		\"fragmentID\": \"S0.0.0.0.0.0.0.0\",
		\"text\": \"\\\"Benissimo, vorrà dire che vi lascerò sistemare le vostre cose. Se avete bisogno mi trovate alla reception.\\\" \",
		\"endType\": \"Continue\",
		\"endOptions\": {
			\"branches\": 1
		}
	}
	</string>
	<string name="S0.0.0.0.0.0.0.1">
	{
		\"fragmentID\": \"S0.0.0.0.0.0.0.1\",
		\"text\": \"\\\"Certo, nessun problema. Da questa parte.\\\" {0} e {1} furono condotti presso una seconda camera molto più ampia della prima. \\\"Questa è perfetta!\\\" - ringraziò {1}. \",
		\"endType\": \"Continue\",
		\"endOptions\": {
			\"reconnectsTo\": \"S0.0.0.0.0.0.0.0.0\"
		}
	}
	</string>
	<string name="S0.0.0.0.0.0.0.0.0">
	{
		\"fragmentID\": \"S0.0.0.0.0.0.0.0.0\",
		\"text\": \"Mentre sistemava la sua roba negli armadi, {0} notò qualcosa. \\\"Guarda {1}, un paio di maracas! Non mi stupisco di trovare oggetti dimenticati in una camera, ma un paio di maracas è decisamente inusuale!\\\" \\\"Maracas hai detto? A che servono?\\\" - domandò {1}. \\\"Non mi dire che non hai mai suonato un paio di maracas! Sono dei rudimentali strumenti a percussione originari del sud america. Adesso ti mostro come si suonano.\\\" \",
		\"endType\": \"Interaction\",
		\"endOptions\": {
			\"message\": \"Suona le maracas. \",
			\"interactionType\": \"Shaking\",
			\"hint\": \"Prova a scuotere il dispositivo. \"
		}
	}
	</string>
</resources>